<resources>
    <string name="app_name">UMDB</string>
    <string name="api_key">YOUR API HERE</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="star">star icon</string>
    <string name="background_image">Background Image</string>
    <string name="poster_image">Poster image</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="settings">Settings</string>
    <string name="user_reviews">User Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="see_all">SEE ALL</string>
    <string name="reviews_s">Review(s)</string>

    <string name="pref_enable_most_popular_movies_key" translatable="false">enable most popular movies</string>
    <string name="pref_enable_most_popular_movies_title" translatable="false">Most Popular Movies</string>
    <string name="pref_enable_most_popular_movies_true">Enabled</string>
    <string name="pref_enable_most_popular_movies_false">Not Enabled</string>

    <string name="pref_enable_top_rated_movies_key" translatable="false">enable top rated movies</string>
    <string name="pref_enable_top_rated_movies_title" translatable="false">Top Rated Movies</string>
    <string name="pref_enable_top_rated_movies_true">Enabled</string>
    <string name="pref_enable_top_rated_movies_false">Not Enabled</string>

    <string name="pref_enable_favorite_movies_key" translatable="false">enable favorite movies</string>
    <string name="pref_enable_favorite_movies_title" translatable="false">Favorite Movies</string>
    <string name="pref_enable_favorite_movies_true">Enabled</string>
    <string name="pref_enable_favorite_movies_false">Not Enabled</string>

    <string name="pref_movies_label">Displayed Movies</string>
    <string name="pref_movies_key">movies</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_favorite">+ Add To Favorite</string>
    <string name="remove_from_favorite">- Remove From Favorite</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="umdb_offline_mode">UMDB Offline Mode</string>

</resources>
