<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    android:paddingBottom="16dp"
    tools:context=".Activities.MovieDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_movie_details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/movie_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:visibility="visible">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/details_movie_layout"
                        android:layout_width="match_parent"
                        android:layout_height="288dp">

                        <ImageView
                            android:id="@+id/details_movie_background_img"
                            android:layout_width="match_parent"
                            android:layout_height="224dp"
                            android:contentDescription="@string/background_image"
                            android:scaleType="fitXY"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/details_thumbnail_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|left"
                        android:padding="16dp"
                        tools:ignore="RtlHardcoded">

                        <ImageView
                            android:id="@+id/details_movie_poster_img"
                            android:layout_width="112dp"
                            android:layout_height="176dp"
                            android:contentDescription="@string/poster_image"
                            android:scaleType="fitXY"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="144dp"
                    android:layout_marginLeft="144dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/details_movie_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        tools:text="Mad Max" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">


                        <ImageButton
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/star"
                            android:src="@drawable/ic_star_gold_24dp" />

                        <TextView
                            android:id="@+id/details_movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            tools:text="7.4" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/offline_movie_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_details_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/offline_details_movie_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="24sp"
                        tools:text="Mad Max" />

                    <TextView
                        android:id="@+id/offline_details_movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_star_gold_24dp"
                        android:drawableLeft="@drawable/ic_star_gold_24dp"
                        android:drawablePadding="8dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        tools:text="7.4" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/extra_details_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offline_movie_details_layout"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/production_year_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/movie_type_tv"
                    tools:ignore="RtlSymmetry"
                    tools:text="2018" />

                <TextView
                    android:id="@+id/movie_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textColor="@color/colorSecondaryText"
                    app:layout_constraintLeft_toRightOf="@id/production_year_tv"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Action,Horror,Sci-Fi" />

                <TextView
                    android:id="@+id/overview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="left"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_type_tv" />

                <Button
                    android:id="@+id/add_to_favorite_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/blue_trading_button"
                    android:text="@string/add_to_favorite"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_tv" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/trailers_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/gray_trading_view_effect"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/extra_details_tv">

                <TextView
                    android:id="@+id/trailer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:text="@string/trailers"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/see_all_trailers_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/see_all"
                    android:textColor="@drawable/link_selection_effect"
                    app:layout_constraintBottom_toBottomOf="@id/trailer_tv"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="RtlSymmetry" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/reviews_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/gray_trading_view_effect"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trailers_layout">

                <TextView
                    android:id="@+id/user_review_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:text="@string/user_reviews"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/see_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/see_all"
                    android:textColor="@drawable/link_selection_effect"
                    app:layout_constraintBottom_toBottomOf="@id/user_review_tv"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="RtlSymmetry" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>